--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "switch": "^0.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
